--- a/style/Main.css
+++ b/style/Main.css
@@ -120,6 +120,13 @@ button:focus {
 .sixth{
 	width: calc((100% / 6 ) - 20px);
 }
+	
+.offline footer{
+	padding: 2px 10px;
+	text-align: right;
+	color: #FFFFFF;
+}
+
 @media screen and (max-width: 1024px) and (max-height: 768px){
 	body{
 		font-size: 10pt;
