--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -188,7 +188,7 @@ header #responseText
 #videos img
 {
     position: absolute;
-    top: 0;
+    top: 10%;
     left: 15%;
     width: 70%;
     pointer-events: none;
