--- a/style/Games/BusGame/Main.css
+++ b/style/Games/BusGame/Main.css
@@ -15,6 +15,8 @@ header {
     box-shadow: none;
 }
 
+*{font-family: 'Arial Rounded MT Bold';}
+
 .title span {
     width: 100%;
     height: 260px;
