--- a/style/Games/BusGame/Main.css
+++ b/style/Games/BusGame/Main.css
@@ -427,5 +427,5 @@ header #score span {
 font-family: 'Arial Rounded MT Bold';
 font-style: normal;
 font-weight: normal;
-src: local('Arial Rounded MT Bold'), url(/fonts/ARLRDBD_0.woff) format('woff');
+src: local('Arial Rounded MT Bold'), url(../../../fonts/ARLRDBD_0.woff) format('woff');
 }
