--- a/style/Games/SentenceGame/Main.css
+++ b/style/Games/SentenceGame/Main.css
@@ -3,7 +3,7 @@
 font-family: 'Arial Rounded MT Bold';
 font-style: normal;
 font-weight: normal;
-src: local('Arial Rounded MT Bold'), url('../fonts/ARLRDBD_0.woff') format('woff');
+src: local('Arial Rounded MT Bold'), url('../../../fonts/ARLRDBD_0.woff') format('woff');
 }
 
 
