--- a/style/Stories.css
+++ b/style/Stories.css
@@ -5,6 +5,7 @@ body{
 	background-color: #0098BA;
 	height: 70%;
     padding-top: 35px;
+    min-height: 300px
 }
 #more-stories-title, #bookmarks-title{
     background-color: #A0EAF7;
