--- a/style/Header.css
+++ b/style/Header.css
@@ -23,12 +23,9 @@ nav{
 nav > div{
 	position: relative;
 	float: right;
-	margin-left: 25px;
+	margin-left: 15px;
 	height: 48px;
 	width: 48px;
-}
-nav > div:not(#nav-search):not(.active):hover{
-	top: 2px;
 }
 .nav-icon{
 	display: block;
@@ -43,11 +40,6 @@ nav > div:not(#nav-search):not(.active):hover{
 }
 #nav-stories-icon{
 	background-image: url('../../img/icons/NavBar/nav_stories.svg');
-}
-#nav-stories-div{
-	margin-right: 20px;
-	margin-left: 25px;
-
 }
 nav > div:not(#nav-search):not(.active):hover #nav-stories-icon{
 	background-image: url('../../img/icons/NavBar/nav_stories_hoverDown.svg');
@@ -66,6 +58,7 @@ nav > div:not(#nav-search):not(.active):hover #nav-user-icon, #nav-user-icon:foc
 }
 #nav-edit-icon{
 	background-image: url('../../img/icons/NavBar/nav_SB.svg');
+	height: 110%;
 }
 nav > div:not(#nav-search):not(.active):hover #nav-edit-icon{
 	background-image: url('../../img/icons/NavBar/nav_SB_hover_selected.svg');
@@ -75,7 +68,6 @@ nav > div:not(#nav-search):not(.active):hover #nav-edit-icon{
 	width: 100px;
 	background-color: #004E74;
 	left: 0px;
-    /*border-radius: 0px 0px 15px 15px;*/
     padding: 5px;
     display: none;
 	border: 3px solid #004E74;
@@ -88,31 +80,14 @@ nav > div:not(#nav-search):not(.active):hover #nav-edit-icon{
 #nav-user-links a{
 	color: #FFFFFF;
 }
-#nav-user{
-	margin-left: 25px;
-	bottom: 0px;
-	border-radius: 100%;
-}
-#nav-user:hover .nav-icon{
-	bottom: 2px;
-}
-#nav-user:hover{
-	bottom: 2px;
-}
 #nav-user:hover .nav-icon, #nav-user:focus .nav-icon{
 	border-radius: 50% 50% 0px 0px;
-}
-.nav-icon:hover{
-	bottom: 2px;
 }
 #nav-user:hover #nav-user-links, #nav-user-icon:focus + #nav-user-links{
 	display: block;
 }
 #nav-search{
-	margin-left: 25px;
-	margin-right: 20px;
 	width: 250px;
-	bottom: 3px;
 }
 #nav-search form{
 	height: 100%;
@@ -143,3 +118,13 @@ nav > div:not(#nav-search):not(.active):hover #nav-edit-icon{
 	border-radius: 0px 50% 50% 0px;
 }
 
+@media screen and (max-width: 1024px), (max-height: 768px){
+	nav > div{
+		margin-left: 10px;
+		height: 30px;
+		width: 30px;
+	}
+	#nav-stories-div{
+		margin-right: 5px;
+	}
+}
