--- a/style/Main.css
+++ b/style/Main.css
@@ -39,7 +39,6 @@ main{
 	overflow: auto;
 	position: fixed;
 	top: 90px;
-	min-height: 600px;
 }
 footer{
 	height: 25px;
@@ -127,8 +126,22 @@ button:focus {
 	color: #FFFFFF;
 }
 
-@media screen and (max-width: 1024px) and (max-height: 768px){
+@media screen and (max-width: 1024px), (max-height: 768px){
 	body{
 		font-size: 10pt;
+	}
+	header{
+		height: 75px;
+	}
+	main{
+		height: calc(100% - 75px - 25px); /* 100% - headerHeight - footerHeight */
+		top: 75px;
+	}
+}
+
+@media screen and (max-width: 800px){
+	body, header, footer, main{
+		position: absolute;
+		min-width: 800px;
 	}
 }
