--- a/style/StoryGrid.css
+++ b/style/StoryGrid.css
@@ -91,3 +91,9 @@
 	0% {opacity: 0; transform: translateX(-100vw);}
 	100% {opacity: 1; transform: translateX(0); }
 }
+
+@media screen and (max-width: 1024px), (max-height: 768px){
+    #stories{
+        width: 100% !important;
+    }
+}
