--- a/style/Editor.css
+++ b/style/Editor.css
@@ -463,6 +463,7 @@ body.dragging{
 	.genre-or-tag button{
 		padding: 5px 10px;
 		padding-left: 40px;
+		font-size: 1em !important;
 	}
 /************/
 
