bugs and documents

--- a/style/Games/SentenceGame/Editor.css
+++ b/style/Games/SentenceGame/Editor.css
@@ -68,6 +68,7 @@
 	background-color: #9EE9F6;
 	font-weight: bold;
 	color: #075379;
+	height: 40px;
 }
 .term-button-container .term-delete-button{
 	position: absolute;
