Changed windows to be a transition instead of an animation

--- a/style/Games/BusGame/Main.css
+++ b/style/Games/BusGame/Main.css
@@ -312,7 +312,7 @@ header #score span {
     display: inline-block;
     height: 35%;
     width: 69.5%;
-
+    overflow: hidden;
     position: absolute;
     z-index: 10;
 }
@@ -423,6 +423,17 @@ header #score span {
     width: auto;
 }
 
+.glass.Up{
+    transform: translateY(0%);
+    transition: transform 0.5s ease;
+}
+.glass.Down{
+     transform: translateY(100%);
+    transition: transform 0.5s ease;
+}
+.glass{
+     pointer-events: none;
+}
 @font-face {
 font-family: 'Arial Rounded MT Bold';
 font-style: normal;
