replaced star anim w/ css transitions

--- a/style/Games/BusGame/Main.css
+++ b/style/Games/BusGame/Main.css
@@ -370,7 +370,6 @@ header #score span {
     height: calc(100%);
     margin-right: 2.8%;
     z-index: 5;
-    transform: rotate(180deg);
 }
 
 .window .star
@@ -382,13 +381,23 @@ header #score span {
     
     background-color: #002f3a;
     border: 1px;
-    border-radius: 15px;
+    border-radius: 15px; 
 }
 
 .window .star.hidden
 {
-    display: none;
+    opacity: 0;
+    background-color: transparent;
+    padding: 50%;
 }
+
+.star.show
+{
+    transform: rotate(360deg);
+    padding: 0;
+    transition: padding .3s ease-in-out, opacity .3s, background-color .5s ease-in, transform .3s;
+}
+
 
 .window span,
 .window video,
