--- a/style/Games.css
+++ b/style/Games.css
@@ -84,3 +84,19 @@ a + .updated{
 .name{
     font-size: 1.2em
 }
+
+.game-delete-button{
+    position: relative;
+    height: 20px;
+    width: 20px;
+    bottom: 5px;
+    left: 5px;
+}
+
+.game-delete-button{
+    border: none;
+    background-image: url('../img/icons/General/icon_Delete_Red.svg');
+}
+.game-delete-button:hover{
+    background-image: url('../img/icons/General/icon_Delete_LtBlue.svg');
+}
