--- a/style/Main.css
+++ b/style/Main.css
@@ -27,7 +27,7 @@ header, footer, main{
 	width: 100%;
 }
 header{
-	height: 90px;
+	height: 80px;
 	background-color: #FFFFFF;
 	top: 0px;
 	box-shadow: 0px 4px 7px rgba(0,0,0,.5);
@@ -38,13 +38,17 @@ main{
 	height: calc(100% - 90px - 25px); /* 100% - headerHeight - footerHeight */
 	overflow: auto;
 	position: fixed;
-	top: 90px;
+	top: 80px;
 }
 footer{
 	height: 25px;
 	background-color: #0098ba;
 	bottom: 0px;
 	box-shadow: 0px -1px 2px 0px rgba(0,0,0,.5);
+	color: white;
+	font-size: .75em;
+	text-align: center;
+	padding-top: 4px;
 }
 
 header #language-selector{
@@ -118,6 +122,15 @@ button:focus {
 }
 .sixth{
 	width: calc((100% / 6 ) - 20px);
+}
+
+.loading-icon {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
 }
 	
 .offline footer{
