--- a/style/StoryPreview.css
+++ b/style/StoryPreview.css
@@ -61,8 +61,49 @@
 	background-image: url('../../img/icons/NavBar/nav_games.svg');
 
 }
+.story-preview .meta-data-container a.story-delete-button{
+	position: absolute;
+	top: 5px;
+	right: 10px;
+	width: 35px;
+	height: 35px;
+	border: none;
+    background: none;
+    background-repeat: no-repeat;
+	background-image: url('../img/icons/General/icon_Delete_Red.svg');
+}
+.story-preview .meta-data-container a.story-delete-button:hover{
+	background-repeat: no-repeat;
+	background-image: url('../img/icons/General/icon_Delete_White.svg');
+}
 .story-preview .meta-data-container a.story-game-button:hover{
 	background-image: url('../../img/icons/NavBar/nav_games_hoverDown2.svg');
 }
+.meta-data-container #social{
+	position: absolute;
+	bottom: 7px;
+}
+.meta-data-container .social {
+    margin: 5px 0px;
+    margin-right: 5px;
+    border-radius: 25px;
+    border: 2px solid #0098BA;
 
+    background-color: #FFFFFF;
+    color: #0098BA;
+    padding: 3px 10px;
+    padding-left: 25px;
+    padding-top: 2px;
+    background-repeat: no-repeat;
+    background-size: 18px 18px;
+    background-position: 5px center;
+    font-size: .75em;
 
+}
+
+#social-views{
+    background-image: url('/img/icons/SocialMedia/icon_SM_Views.svg');
+}
+#social-likes{
+    background-image: url('/img/icons/SocialMedia/icon_SM_Likes.svg');
+}
