--- a/style/StoryViewer.css
+++ b/style/StoryViewer.css
@@ -13,8 +13,8 @@
 	-ms-transition: height, width .5s;
 }
 #page-counter{
-	height: 50px;
-	margin: 5px;
+	height: 40px;
+	margin: 0px;
 	text-align: center;
 
 	background-image: url(../img/icons/StoryViewer/bkgd_pageCounter.svg);
@@ -23,9 +23,9 @@
     background-position: center;
 }
 #page-counter span{
-	font-size: 35px;
+	font-size: 25px;
 	font-weight: bold;
-	width: 100px;
+	width: 80px;
     display: inline-block;
 }
 #page-counter #current{
@@ -36,11 +36,12 @@
 }
 
 #page-content{
-	height: calc(100% - 120px);
+	height: calc(100% - 60px);
 }
 #page-content > div{
-	height: calc(100% - 20px);
+	height: calc(100% - 10px);
 	position: relative;
+	margin-top: 5px;
 }
 .story-viewer-nav-button{
 	height: 100%;
@@ -101,7 +102,12 @@
 #story-viewer-previous > div{
 	background-position: right center;
 }
-
+#story-viewer-previous .num{
+	right: 10px;
+}
+#story-viewer-next .num{
+	left: 10px;
+}
 .story-viewer-page{
 	background-color: #002E45;
 	overflow: hidden;
@@ -155,7 +161,7 @@
     max-width: calc(100% - 10px);
 }
 .video-container.text-open{
-	height: calc(60% - 40px);
+	height: calc(80% - 20px);
 }
 #text-toggle-container{
 	height: 40px;
@@ -184,7 +190,7 @@
 	padding: 15px 50px;
 	background-color: #0098ba;
 	line-height: 1.75em;
-	font-size: 1.5em;
+	font-size: 1.3em;
 
 	transition: height .5s;
 	-moz-transition: height .5s;
@@ -192,11 +198,12 @@
 	-ms-transition: height .5s;
 }
 #text-container.text-open{
-	height: 40%;
+	height: 20%;
 	overflow: auto;
 }
 #page-controller{
 	height: 60px;
+	margin-top: 5px;
 	padding: 10px;
 	text-align: center;
 	background-color: #0098BA;
@@ -208,7 +215,7 @@
 	width: 40px;
 
 	right: 10px;
-	bottom: 10px;
+	bottom: -35px;
 	border: none;
 	background: none;
 	background-image: url(../img/icons/StoryViewer/icon_SV_FullScreen.svg);
@@ -217,6 +224,20 @@
 	background-image: url(../img/icons/StoryViewer/icon_SV_FullScreen_hoverDown.svg);
 }
 
+a.story-game-button{
+	position: absolute;
+	bottom: -35px;
+	right: 60px;
+	width: 40px;
+	height: 40px;
+	border: none;
+    background: none;
+    background-repeat: no-repeat;
+	background-image: url('../../img/icons/NavBar/nav_games_DkBlue.svg');
+}
+a.story-game-button:hover{
+	background-image: url('../../img/icons/NavBar/nav_games_hoverDown2.svg');
+}
 #story-viewer:fullscreen #fullscreen-toggle{background-image: url(../img/icons/StoryViewer/icon_SV_FullScreen_Reverse.svg);}
 #story-viewer:fullscreen #fullscreen-toggle:hover{background-image: url(../img/icons/StoryViewer/icon_SV_FullScreen_Reverse_hoverDown.svg);}
 #story-viewer:fullscreen .story-viewer-nav{width: 80px;}
