--- a/style/Viewer.css
+++ b/style/Viewer.css
@@ -1,34 +1,38 @@
 #viewer {
     width: 100%;
-    height: 70%;
+    height: 80%;
 }
 #details {
     width: 50%;
-    margin: 5px auto 25px;
+    margin: 45px auto 25px;
     text-align: left;
 }
 #title {
-    margin: 5px 0px;
-    font-size: 2em;
+    margin: 0px 0px;
+    font-size: 1.8em;
 }
-#author{
+.storyCredits{
     margin: 5px 0px;
-    font-size: 1.2em;
+    margin-top: 0px;
+    margin-right: 15px;
+    font-size: 1.1em;
+}
+#storyCredits{
+    margin-bottom: 5px;
 }
 .social {
-    margin: 5px 0px;
+    margin: 0px 0px;
     margin-right: 10px;
     border-radius: 25px;
     border: 2px solid #0098BA;
 
     background-color: #FFFFFF;
     color: #0098BA;
-    padding: 5px 10px;
+    padding: 4px 10px;
     padding-left: 40px;
     background-repeat: no-repeat;
     background-size: 30px 30px;
     background-position: 5px center;
-    font-size: 1.1em;
 }
 .socialExport {
     color: #FFFFFF;
